...
        .init(id: "15", name: "A Coruña"),    .init(id: "16", name: "Cuenca"),
        .init(id: "17", name: "Girona"),      .init(id: "18", name: "Granada"),
        .init(id: "19", name: "Guadalajara"), .init(id: "20", name: "Gipuzkoa"),
        .init(id: "21", name: "Huelva"),      .init(id: "22", name: "Huesca"),
        .init(id: "23", name: "Jaén"),        .init(id: "24", name: "León"),
        .init(id: "25", name: "Lleida"),      .init(id: "26", name: "La Rioja"),
        .init(id: "27", name: "Lugo"),        .init(id: "28", name: "Madrid"),
        .init(id: "29", name: "Málaga"),      .init(id: "30", name: "Murcia"),
        .init(id: "31", name: "Navarra"),     .init(id: "32", name: "Ourense"),
        .init(id: "33", name: "Asturias"),    .init(id: "34", name: "Palencia"),
        .init(id: "35", name: "Las Palmas"),  .init(id: "36", name: "Pontevedra"),
        .init(id: "37", name: "Salamanca"),   .init(id: "38", name: "S. C. Tenerife"),
        .init(id: "39", name: "Cantabria"),   .init(id: "40", name: "Segovia"),
...
